--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-sluggable": "^3.3"
+        "spatie/laravel-sluggable": "^3.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
